# general_manager

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  codecov.yml  general_manager.code-workspace  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
example_project/outer_rim_logistics/: .dockerignore  .env.example  Dockerfile  README.md  __init__.py  docker-compose.yml  manage.py  orl_test_settings.py  pyproject.toml  pytest.ini
example_project/outer_rim_logistics/crew/: apps.py  models.py
example_project/outer_rim_logistics/docker/: entrypoint-celery.sh  entrypoint.sh  init-entrypoint.sh  loki.yml  meilisearch.Dockerfile  nginx-entrypoint.sh  nginx.Dockerfile  nginx.conf  nginx.conf.template  postgres-exporter-entrypoint.sh  postgres-exporter-queries.yml  prometheus-entrypoint.sh  prometheus-rules.yml  prometheus.Dockerfile  prometheus.yml  promtail.yml
example_project/outer_rim_logistics/k6/: orl_k6.js  queries.js  record_run.sh  run_baseline.sh  run_capture.sh  run_heavy_calc.sh  run_mix.sh  run_mix_scaled.sh  run_queries_mutations_only.sh  run_queries_only.sh  run_scale_capture.sh  run_scale_suite.sh  run_soak.sh  run_spike.sh  run_stress.sh  run_subscriptions_only.sh  summarize_k6.py
example_project/outer_rim_logistics/maintenance/: apps.py  models.py
example_project/outer_rim_logistics/mission/: apps.py  models.py
example_project/outer_rim_logistics/orl/: __init__.py  asgi.py  celery.py  factory_utils.py  metrics.py  settings.py  tasks.py  urls.py  wsgi.py
(+1053 files in other folders)
